--- a/Survey-Creater/pom.xml
+++ b/Survey-Creater/pom.xml
@@ -58,7 +58,20 @@
 			<artifactId>velocity</artifactId>
 			<version>1.7</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.46</version>
+		</dependency>
     </dependencies>
 
 	<build>
