--- a/Survey-Creater/src/main/resources/application.properties
+++ b/Survey-Creater/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/survey?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/survey?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=olonn
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-mybaitis-plus.mapper-locations=classpath*:/mapper/*.xml
+mybatis-plus.mapper-locations=classpath*:/mapper/*.xml
