增加了调查结果的格式化以及redis数据库的连接配置和工具类

--- a/Survey-Creater/src/main/resources/application.properties
+++ b/Survey-Creater/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.password=olonn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis-plus.mapper-locations=classpath*:/mapper/*.xml
+
+#REDIS
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.timeout=5000
