添加token用户验证以及免登陆功能

--- a/Survey-Creater/pom.xml
+++ b/Survey-Creater/pom.xml
@@ -83,7 +83,13 @@
 			<artifactId>jedis</artifactId>
 			<version>2.9.1</version>
 		</dependency>
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
