--- a/Survey-Creater/src/main/resources/application.properties
+++ b/Survey-Creater/src/main/resources/application.properties
@@ -10,6 +10,7 @@ mybatis-plus.mapper-locations=classpath*:/mapper/*.xml
 #REDIS
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+spring.redis.password=
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
 spring.redis.pool.max-idle=8
