--- a/Survey-Creater-view/survey-creater/package.json
+++ b/Survey-Creater-view/survey-creater/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^4.1.0",
     "survey-knockout": "^1.0.66",
     "surveyjs-mod": "^1.0.15",
     "vue": "^2.5.2"
