修复hashmapkey值空的bug以及添加结果分析逻辑

--- a/Survey-Creater/src/main/resources/application.properties
+++ b/Survey-Creater/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=olonn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis-plus.mapper-locations=classpath*:/mapper/*.xml
+mybatis-plus.config-location=classpath:/mybatis-setting.xml
 
 #REDIS
 spring.redis.host=127.0.0.1
