增加了三维图分析的功能，修复了中文转码bug

--- a/Survey-Creater-view/survey-creater/package.json
+++ b/Survey-Creater-view/survey-creater/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "echarts": "^4.1.0",
+    "echarts-gl": "^1.1.1",
     "survey-knockout": "^1.0.66",
     "surveyjs-mod": "^1.0.15",
     "v-charts": "^1.19.0",
