--- a/Survey-Creater-view/survey-creater/package.json
+++ b/Survey-Creater-view/survey-creater/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "echarts": "^4.1.0",
     "echarts-gl": "^1.1.1",
+    "hzqing-vue-timeline": "^1.0.3",
     "survey-knockout": "^1.0.66",
     "surveyjs-mod": "^1.0.15",
     "v-charts": "^1.19.0",
